--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -52,11 +52,11 @@
         </StackPanel>
         <Grid x:Name="LayoutRoot"  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Background="#FF2C2C2C">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="106*" />
-                <ColumnDefinition Width="105*"/>
-                <ColumnDefinition Width="211*" />
+                <ColumnDefinition Width="130"/>
+                <ColumnDefinition Width="40*" />
+                <ColumnDefinition Width="40*" />
+                <ColumnDefinition Width="30*"/>
+                <ColumnDefinition Width="30*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
@@ -81,34 +81,27 @@
                     </TextBlock.ToolTip>
                 </TextBlock>
             </StackPanel>
-            <StackPanel Name="PlayingControls" Orientation="Horizontal" Grid.Row="1" Grid.Column="1"
-                        HorizontalAlignment="Right" Grid.ColumnSpan="3" Height="100" VerticalAlignment="Bottom">
-                <Button Cursor="Hand" Style="{DynamicResource ResourceKey=FlatWithoutBorders}" HorizontalAlignment="Left" x:Name="StopButton" MinWidth="50" Width="auto" Height="Auto" HorizontalContentAlignment="Center"  
-                    Click="StopButton_Click" Margin="0,34">
-                    <Image  Source="Icons/Stop.png"  />
-                </Button>
-                <Button  Cursor="Hand" Style="{DynamicResource ResourceKey=FlatWithoutBorders}" HorizontalAlignment="Left" x:Name="Previous" MinWidth="50"  Height="32" 
-                    Click="Previous_Click" HorizontalContentAlignment="Center"  >
-                    <Image Source="Icons/Rewind_52px.png"/>
-                </Button>
-                <Button Cursor="Hand"  Style="{DynamicResource ResourceKey=FlatWithoutBorders}" HorizontalAlignment="Left" x:Name="PlayPauseButton" MinWidth="50" Width="auto" Height="60" HorizontalContentAlignment="Center"  
-                    Click="PlayPause_Click" Margin="5 0 0 0" Foreground="#00000000" BorderBrush="#00707070" Background="#00DDDDDD">
-                    <Image x:Name="imageInside" Source="Icons/Play_52px.png"  />
-                </Button>
+            <StackPanel Name="PlayingControls" Orientation="Horizontal" Grid.Row="1" Grid.Column="2"
+                        HorizontalAlignment="Center"  Height="100" VerticalAlignment="Bottom">
 
-                <Button  Cursor="Hand" Style="{DynamicResource ResourceKey=FlatWithoutBorders}" HorizontalAlignment="Left"  x:Name="Next" MinWidth="40" Width="40" Height="35" HorizontalContentAlignment="Center"
+                <Button  Cursor="Hand" Style="{DynamicResource ResourceKey=FlatWithoutBorders}"  x:Name="Previous" MinWidth="50"  Height="40" 
+                    Click="Previous_Click" Margin="0 0 0 0">
+                    <Image Source="Icons/Prev.png"/>
+                </Button>
+                <Button Cursor="Hand"  Style="{DynamicResource ResourceKey=FlatWithoutBorders}" x:Name="PlayPauseButton"  Height="55"
+                    Click="PlayPause_Click" Margin="5 0 0 0" >
+                    <Image x:Name="imageInside" Source="Icons/Play.png"  />
+                </Button>
+                <Button  Cursor="Hand" Style="{DynamicResource ResourceKey=FlatWithoutBorders}"   x:Name="Next"  Height="40" 
                     Click="Next_Click" Margin="5 0 0 0"  >
-                    <Image Margin="3 0 0 0" Height="32" Source="Icons/Fast Forward_52px.png" />
+                    <Image  Source="Icons/Next.png" />
                 </Button>
             </StackPanel>
-
             <Image Margin="0 0 0 0"  Height="130"  Width="130"  VerticalAlignment="Bottom"
                 Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"   
                 Cursor="Hand" MouseLeftButtonDown="Image_MouseLeftButtonDown"  Source="Icons/music-record-small.png" x:Name="Thumbnail"/>
             <StackPanel   Margin="0,0,40,0" Orientation="Horizontal" Grid.Row="1" 
-                          VerticalAlignment="Stretch" Grid.Column="4" HorizontalAlignment="Right" Width="146">
-
-
+                          VerticalAlignment="Stretch" Grid.Column="3" Grid.ColumnSpan="2"  HorizontalAlignment="Right" Width="146">
                 <Image Cursor="Hand" x:Name="volumeChanger"  MouseLeftButtonDown="VolumeChanger_MouseLeftButtonDown"  Margin="15 0 5 0" 
                     Height="18" Width="18" Source="Icons/Speaker_52px.png" />
                 <Slider Cursor="Hand"  HorizontalAlignment="Left"  x:Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
