--- a/aMuse.UI/PlaylistPage.xaml
+++ b/aMuse.UI/PlaylistPage.xaml
@@ -9,7 +9,7 @@
       Title="PlaylistPage" Background="#FF363636">
 
     <Grid  Background="#FF363636">
-            <ListBox  Grid.Row="0"  Margin="0 0 0 0"  x:Name="ListTracks" MouseDoubleClick="ListTracks_MouseDoubleClick"  Grid.IsSharedSizeScope="True" FontWeight="Normal">
+            <ListBox  Grid.Row="0"   x:Name="ListTracks" MouseDoubleClick="ListTracks_MouseDoubleClick"  Grid.IsSharedSizeScope="True" FontWeight="Normal">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
